# SOFTENG_306_Group3_Project_1

./: README.md  ryun.text
Alpha_1/: CMakeLists.txt  package.xml
Alpha_1/src/: R0.cpp  R1.cpp  R2.cpp  R3.cpp  R4.cpp  R5.cpp  grass.cpp
Alpha_1/world/: farm_pgm.pgm  myworld.world  newWorld.world  worldCreator.sh  worldCreator_assistant.sh  worldCreator_assistant2.sh
Documentation/: Project Plan.mpp  README  SE 306 WBS.docx  SOFTENG 306 Project Plan.docx
Documentation/Weekly reports/: Oriental Turtles week4 - Peter.pptx
Old/Alpha_1/world/: myworld.world
Old/SheepAI_package/this_laser/: CMakeLists.txt
Old/newWorldFileandGenerator/: myworld.world  worldCreator.sh
Old/these_bots/: package.xml
Old/these_bots/include/: asd.txt
Old/these_bots/src/: R1.cpp
Old/these_bots/world/: my_world.world
SheepAI_package/this_laser/: CMakeLists.txt  package.xml
SheepAI_package/this_laser/src/: laser_scan_listener.cpp
SheepAI_package/this_laser/world/: myworld.world  this_world.world
WorldGenerator/: .classpath  .project
WorldGenerator/src/wg/: Main.java  WGConfig.java
newWorldFileandGenerator/: myworld.world  worldCreator.sh
simple_example/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
simple_example/src/these_bots/: CMakeLists.txt
src/alpha_two/: CMakeLists.txt  package.xml
src/alpha_two/msg/: farmState.msg  grassState.msg  herdingBar.msg  msgREADME  rainFall.msg  sheepDogState.msg  sheepState.msg
src/alpha_two/src/: Farmer.cpp  Gate9.cpp  Gates.cpp  HerdingBar.cpp  R0.cpp  R1.cpp  R2.cpp  R3.cpp  R4.cpp  R5.cpp  R6.cpp  SheepDog.cpp  SheepDog0.cpp  SheepDog1.cpp  cloud.cpp  farm.cpp  grass.cpp  truck.cpp
src/alpha_two/world/: herding.py  kill.py  myworld.world  nohup.out  (+6 more)
with_farmer/world/: myworld.world  worldCreator.sh
(+6 files in other folders)
